--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="eng">
-
 <head>
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,139 +15,53 @@
 </head>
 
 <body onload="installServiceWorkerAsync()">
+	<h1 class="display-3 text-center">Currency Converter</h1>
 	<div class="big-wrapper">
 		<div class="container">
-				<form class ="signupForm">
-						<div class="form-group">
-							<div class="form-row">
-								<div class="col-md-6">
-									<label for="">Select Currency</label>
-									<select class="form-control" name="" id="fromCurrency" placeholder="Select currency">
-										<option value="">== Select Currency ==</option>
-									</select>
-								</div>
-
-								<div class="col-md-6">
-									<label for="">Other Currency</label>
-									<select class="form-control" name="" id="toCurrency" placeholder="Other currency">
-                                        <option value="">== Select Currency ==</option>
-									</select>
-								</div>
-							</div>
-						</div>
-						<div class="form-group">
-							<div class="form-row">
-								<div class="col-md-12">
-									<label for="">Enter Amount</label>
-									<input class="form-control" type="number" name="" id="amount" placeholder="Enter Amount...">
-								</div>
-							</div>
+			<form class ="signupForm">
+				<div class="form-group">
+					<div class="form-row">
+						<div class="col-md-6">
+							<label for="">Select Currency</label>
+							<select class="form-control" name="" id="fromCurrency" placeholder="Select currency">
+								<option value="">== Select Currency ==</option>
+							</select>
 						</div>
 
-                        <input type="button" id="convert"  value="Convert Currency" class="btn btn-primary btn-block">	
-
-                        <br />
-                        <br />
-
-                        <div class="form-group">
-                            <div class="form-row">
-                                <div class="col-md-12">
-                                    <label for="">Output</label>
-                                    <input class="form-control" type="text" name="convertedTo" id="convertedTo" placeholder="Result">
-                                </div>
-                            </div>
-                        </div>
-
-
-					</form>
+						<div class="col-md-6">
+							<label for="">Other Currency</label>
+							<select class="form-control" name="" id="toCurrency" placeholder="Other currency">
+								<option value="">== Select Currency ==</option>
+							</select>
+						</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="form-row">
+						<div class="col-md-12">
+							<label for="">Enter Amount</label>
+							<input class="form-control" type="number" name="" id="amount" placeholder="Enter Amount...">
+						</div>
+					</div>
+				</div>
+				<input type="button" id="convert"  value="Convert Currency" class="btn btn-primary btn-block">	
+				<br />
+				<br />
+				<div class="form-group">
+					<div class="form-row">
+						<div class="col-md-12">
+							<label for="">Output</label>
+							<input class="form-control" type="text" name="convertedTo" id="convertedTo" placeholder="Result">
+						</div>
+					</div>
+				</div>
+			</form>
 		</div>
 	</div>
-    <!-- <div class="main-wrapper-first">
-        <div class="hero-area relative">
-            <header>
-                <div class="container">
-                    <div class="header-wrap">
-                        <div class="header-top d-flex justify-content-between align-items-center">
-                            <div class="logo">
-                                <a href="./offline.html">
-                                    <h2 class="text-white">Fast Currency Converter</h2>
-                                </a>
-                            </div>
-                            <div class="main-menubar d-flex align-items-center">
-
-                                <div class="menu-bar">
-                                    <span class="lnr lnr-menu"></span>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </header>
-            <div class="banner-area">
-                <div class="container">
-                    <div class="height align-items-center">
-
-                    </div>
-                    <center>
-                        <h1 class="main text-white">Try it out!</h1>
-                        <h4 class="text-white"> Convert Currency</h4>
-                    </center>
-                    <div class="row">
-                        <div class="col-md-5">
-                            <div class="row">
-                                <div class="col-md-6 mb-3">
-                                    <input type="text" class="form-control is-valid" id="validationServer01" placeholder="First name" value="Mark" required>
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    <select class="custom-select d-block my-3" required>
-                                        <option></option>
-                                    </select>
-                                </div>
-                            </div>
-                            <input type="text" name="text" required>
-                        </div>
-                        <div class="col-md-2">
-
-                        </div>
-                        <div class="col-md-5">
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <footer>
-        <div class="container">
-            <div class="footer-content d-flex justify-content-between align-items-center flex-wrap">
-                <div class="logo">
-                    <a href="index.html"></a>
-                </div>
-                <div class="copy-right-text">Copyright &copy; 2018 |Feyex Web </div>
-                <div class="footer-social">
-                    <a href="#">
-                        <i class="fa fa-facebook"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fa fa-twitter"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fa fa-dribbble"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fa fa-behance"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </footer>
-    </section>
-    </div> -->
+ 
 
     <script src="static/idb.js"></script>
-    <script src="static/fcv.js"></script>
+    <script src="static/main.js"></script>
 </body>
 
 </html>
